--- a/Frame3.html
+++ b/Frame3.html
@@ -161,7 +161,7 @@
       var homeText = document.getElementById("homeText");
       if (homeText) {
         homeText.addEventListener("click", function (e) {
-          window.location.href = "./Index.html";
+          window.location.href = "./index.html";
         });
       }
       
