--- a/Frame7.html
+++ b/Frame7.html
@@ -151,7 +151,7 @@
       var homeText = document.getElementById("homeText");
       if (homeText) {
         homeText.addEventListener("click", function (e) {
-          window.location.href = "./Index.html";
+          window.location.href = "./index.html";
         });
       }
       
